# sem3-fefuschedule

./: .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  runserver.py
.github/workflows/: auto_release.yaml  build_release.yaml  web_deploy.yaml
api/: Dockerfile  config.py  pyproject.toml  runserver.py
api/database/: database.py  models.py
api/migrations/: env.py
api/migrations/versions/: 271c2b9a875b_add_event_and_user_model.py  802caa7a1ed0_init.py  81d9e8c4cfb5_add_field_changed_to_an_event.py  bd5bf94b3f35_add_subgroups_count_to_model_group.py  fbf109745469_event_model_fix.py  (+1 more)
api/src/: app.py  external.py  malfunc.py
app/: .gitignore  build.yaml  pubspec.yaml  slang.yaml  splash.yaml
app/.dart_tool/: package_config.json  package_config_subset  version
app/lib/: main.dart  router.dart  utils.dart
app/nav_bar/: pubspec.yaml
app/web/: index.html
backend/: Makefile  docker-compose.yaml
backend/api/: Dockerfile  config.py  pyproject.toml
backend/api/database/: models.py
backend/api/migrations/versions/: 072c34a688fe_fix_event_model.py  271c2b9a875b_add_event_and_user_model.py  60eace25eb3e_add_special_event_upd_user_add_subgroup.py  802caa7a1ed0_init.py  c2d52f616946_fix_user_model.py  e251ae4cd51c_facility_model.py  fbf109745469_event_model_fix.py
backend/api/src/: app.py  external.py  utils.py
backend/api/src/api/: api.py  auth.py  event.py  install.py  user.py
backend/api/src/static/: facilities.txt
migrations/versions/: 8dc22a9d1091_init.py
src/: app.py  external.py
src/static/: classes.txt  groups.txt
(+46 files in other folders)
